--- a/.github/workflows/upload-to-testrail.yml
+++ b/.github/workflows/upload-to-testrail.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install ts-node & TypeScript
+      run: npm install -g ts-node typescript
+  
       - name: Run WebDriverIO Tests
         run: npm run test
 
