--- a/.github/workflows/upload-to-testrail.yml
+++ b/.github/workflows/upload-to-testrail.yml
@@ -33,4 +33,4 @@ jobs:
         run: npm run test
 
       - name: Upload Test Results to TestRail
-        run: npm run upload-results
+        run: npx ts-node ./test/testrail-cli/uploadResultsToTestRail.ts
