--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "moduleResolution": "node",
-      "module": "ESNext",
+      "module": "CommonJS",                            
       "target": "es2022",
       "lib": [
         "es2022",
