--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
     "compilerOptions": {
       "moduleResolution": "node",
-      "module": "CommonJS",                            
+      "module": "ESNext",
       "target": "es2022",
-      "lib": [
-        "es2022",
-        "dom"
-      ],
+      "lib": ["es2022", "dom"],
       "types": [
         "node",
         "@wdio/globals/types",
@@ -24,9 +21,6 @@
       "noUnusedParameters": true,
       "noFallthroughCasesInSwitch": true
     },
-    "include": [
-      "test",
-      "wdio.conf.ts"
-    ]
+    "include": ["test", "wdio.conf.ts"]
   }
   
