--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ TESTRAIL_USERNAME=harsh.wardhan+1@cloudkaptan.com
 TESTRAIL_API_TOKEN='/OYZSIYguRs7ESxwOcLs-ferxH2nIgf6OJrSeMfI2'
 TESTRAIL_PROJECT_ID=1
 TESTRAIL_SUITE_ID=1
+SCHEDULED_RUN=true
