--- a/.github/workflows/frame1-tests.yml
+++ b/.github/workflows/frame1-tests.yml
@@ -7,7 +7,7 @@ jobs:
   frame1-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: "frame1.test.ts"
+      scenario-tags: "frame1"
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
