--- a/.github/workflows/frame3.tests.yml
+++ b/.github/workflows/frame3.tests.yml
@@ -7,7 +7,7 @@ jobs:
   frame3-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: "frame3.test.ts"
+      scenario-tags: "frame3"
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
