--- a/.github/workflows/frame-tests.yml
+++ b/.github/workflows/frame-tests.yml
@@ -2,6 +2,9 @@ name: Run Frame Tests
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "48 6 * * *"  # Runs at 12:18 PM IST daily
+
 
 jobs:
   frame-test-run:
