--- a/.github/workflows/frame-tests.yml
+++ b/.github/workflows/frame-tests.yml
@@ -3,14 +3,13 @@ name: Run Frame Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: "48 6 * * *"  # Runs at 12:18 PM IST daily
-
+    - cron: "24 7 * * *"  # Runs at 12:54 PM IST daily
 
 jobs:
   frame-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: "frame"
+      scenario-tags: "\\[FRAME\\]"
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
