--- a/.github/workflows/frame2-tests.yml
+++ b/.github/workflows/frame2-tests.yml
@@ -3,14 +3,12 @@ name: Run Frame2 Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: "48 6 * * *"  # Runs at 12:18 PM IST daily
-
-
+    - cron: "24 7 * * *"  # Runs at 12:54 PM IST daily
 jobs:
   frame2-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: "frame2"
+      scenario-tags: "\\[FRAME2\\]"
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
