--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -39,20 +39,20 @@ jobs:
         run: echo "scheduled_run=$([[ '${{ github.event_name }}' == 'schedule' && ${{ github.run_attempt }} == 1 ]] && echo true || echo false)" >> $GITHUB_OUTPUT
 
       - name: Debug scheduled_run evaluation
-        run: echo "Scheduled Run Check: ${{ steps.schedule_check.outputs.scheduled_run }}"
+          run: echo "Scheduled Run Check: ${{ steps.schedule_check.outputs.scheduled_run }}"  
 
       - name: Run WebDriverIO tests by tag
         run: npx wdio run ./wdio.conf.ts --mochaOpts.grep "${{ inputs.scenario-tags }}"
 
       - name: Upload results to TestRail (if scheduled)
-        if: always()
-        continue-on-error: true
+        if: steps.schedule_check.outputs.scheduled_run == 'true'
+        run: |
+          node --loader ts-node/esm ./test/testrail-cli/uploadResultsToTestRail.ts
         env:
           TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
           TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
           TESTRAIL_HOST: ${{ secrets.TESTRAIL_HOST }}
           TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
           TESTRAIL_SUITE_ID: ${{ secrets.TESTRAIL_SUITE_ID }}
-          SCHEDULED_RUN: ${{ steps.schedule_check.outputs.scheduled_run }}
-        run: |
-          node --loader ts-node/esm ./test/testrail-cli/uploadResultsToTestRail.ts
+          SCHEDULED_RUN: true
+
