--- a/.github/workflows/frame-tests.yml
+++ b/.github/workflows/frame-tests.yml
@@ -3,13 +3,13 @@ name: Run Frame Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: "53 7 * * *"  # Runs at 1:23 PM IST daily
+    - cron: "12 8 * * *"  # Runs at 1:42 PM IST daily
 
 jobs:
   frame-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: "\\[FRAME\\]"
+      scenario-tags: '[FRAME]'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
