--- a/.github/workflows/frame1-tests.yml
+++ b/.github/workflows/frame1-tests.yml
@@ -3,13 +3,13 @@ name: Run Frame1 Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: "53 7 * * *"  # Runs at 1:23 PM IST daily
+    - cron: "12 8 * * *"  # Runs at 1:42 PM IST daily
 
 jobs:
   frame1-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: "\\[FRAME1\\]"
+      scenario-tags: '[FRAME1]'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
