--- a/.github/workflows/frame2-tests.yml
+++ b/.github/workflows/frame2-tests.yml
@@ -3,12 +3,13 @@ name: Run Frame2 Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: "53 7 * * *"  # Runs at 1:23 PM IST daily
+    - cron: "12 8 * * *"  # Runs at 1:42 PM IST daily
+
 jobs:
   frame2-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: "\\[FRAME2\\]"
+      scenario-tags: '[FRAME2]'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
