--- a/.github/workflows/frame3.tests.yml
+++ b/.github/workflows/frame3.tests.yml
@@ -3,7 +3,7 @@ name: Run Frame3 Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: "12 8 * * *"  # Runs at 1:42 PM IST daily
+    - cron: "58 10 * * *"
 
 jobs:
   frame3-test-run:
