--- a/.github/workflows/frame3.tests.yml
+++ b/.github/workflows/frame3.tests.yml
@@ -3,7 +3,7 @@ name: Run Frame3 Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: "14 11 * * *"  # Runs at 4:44 PM IST daily
+    - cron: "30 11 * * *"
 
 jobs:
   frame3-test-run:
