--- a/.github/workflows/frame1-tests.yml
+++ b/.github/workflows/frame1-tests.yml
@@ -3,7 +3,7 @@ name: Run Frame1 Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: "14 11 * * *"  # Runs at 4:44 PM IST daily
+    - cron: "30 11 * * *"
 
 jobs:
   frame1-test-run:
