--- a/.github/workflows/frame2-tests.yml
+++ b/.github/workflows/frame2-tests.yml
@@ -3,13 +3,14 @@ name: Run Frame2 Tests
 on:
   workflow_dispatch:
   schedule:
-    - cron: "30 13 * * *"
+    - cron: "58 5 * * *"
 
 jobs:
   frame2-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
       scenario-tags: '[FRAME2]'
+      result-file: 'results-0-2.chrome.xml'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
