--- a/.github/workflows/frame-tests-daily.yml
+++ b/.github/workflows/frame-tests-daily.yml
@@ -1,16 +1,17 @@
-name: Run Frame2 Tests
+name: Run Frame Tests - Daily
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "35 7 * * *"
+    - cron: "10 8 * * *"
 
 jobs:
-  frame2-test-run:
+  frame-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: '[FRAME2]'
-      result-file: 'results-0-2.chrome.xml'
+      scenario-tags: '[FRAME]'
+      tag-filter: '[DAILY]'
+      result-file: 'results-0-0.chrome.xml'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
