--- a/.github/workflows/frame-tests-daily.yml
+++ b/.github/workflows/frame-tests-daily.yml
@@ -3,7 +3,7 @@ name: Run Frame Tests - Daily
 on:
   workflow_dispatch:
   schedule:
-    - cron: "10 9 * * *"
+    - cron: "12 11 * * *"  # 4:42 PM IST
 
 jobs:
   frame-test-run:
