--- a/.github/workflows/frame2-tests-weekly.yml
+++ b/.github/workflows/frame2-tests-weekly.yml
@@ -3,7 +3,7 @@ name: Run Frame2 Tests - Weekly
 on:
   workflow_dispatch:
   schedule:
-    - cron: "20 11 * * 1"  # Runs at 4:50 PM IST every Monday
+    - cron: "45 11 * * 1"  # 5:15 PM IST
 
 jobs:
   frame2-test-run:
