--- a/.github/workflows/frame1-tests-weekly.yml
+++ b/.github/workflows/frame1-tests-weekly.yml
@@ -3,7 +3,7 @@ name: Run Frame1 Tests - Weekly
 on:
   workflow_dispatch:
   schedule:
-    - cron: "45 11 * * 1"  # 5:15 PM IST
+    - cron: "00 12 * * 1"  # 5:30 PM IST every Monday
 
 jobs:
   frame1-test-run:
