--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -48,8 +48,8 @@ jobs:
 
       - name: Run filtered tests
         run: |
-          echo "Running grep for: \[${{ inputs.scenario-tags }}\] \[${{ inputs.tag-filter }}\]"
-          npx wdio run ./wdio.conf.ts --mochaOpts.grep="\[${{ inputs.scenario-tags }}\] \[${{ inputs.tag-filter }}\]"
+           echo "Running grep for: [${{ inputs.scenario-tags }}] [${{ inputs.tag-filter }}]"
+          npx wdio run ./wdio.conf.ts --mochaOpts.grep="[${{ inputs.scenario-tags }}] [${{ inputs.tag-filter }}]"
 
       - name: Upload results to TestRail (if scheduled)
         if: "steps.schedule_check.outputs.scheduled_run == 'true'"
