--- a/.github/workflows/frame-tests-weekly.yml
+++ b/.github/workflows/frame-tests-weekly.yml
@@ -3,14 +3,14 @@ name: Run Frame Tests - Weekly
 on:
   workflow_dispatch:
   schedule:
-    - cron: "00 12 * * 1"  # 5:30 PM IST every Monday
+    - cron: "15 12 * * 1"  # 5:45 PM IST on Mondays
 
 jobs:
   frame-test-weekly:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: '[FRAME]'
-      tag-filter: '[WEEKLY]'
+      scenario-tags: 'FRAME'
+      tag-filter: 'WEEKLY'
       result-file: 'results-0-0.chrome.xml'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
