--- a/.github/workflows/frame1-tests-daily.yml
+++ b/.github/workflows/frame1-tests-daily.yml
@@ -3,14 +3,14 @@ name: Run Frame1 Tests - Daily
 on:
   workflow_dispatch:
   schedule:
-    - cron: "47 11 * * *"  # 5:17 PM IST every day
+    - cron: "08 12 * * *"  # 5:38 PM IST every day
 
 jobs:
   frame1-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: '[FRAME1]'
-      tag-filter: '[DAILY]'
+      scenario-tags: 'FRAME1'
+      tag-filter: 'DAILY'
       result-file: 'results-0-1.chrome.xml'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
