--- a/.github/workflows/frame2-tests-daily.yml
+++ b/.github/workflows/frame2-tests-daily.yml
@@ -3,7 +3,7 @@ name: Run Frame2 Tests - Daily
 on:
   workflow_dispatch:
   schedule:
-    - cron: "42 12 * * *"  # 6:12 PM IST every day
+    - cron: "14 14 * * *"  # 7:40 PM IST daily
 
 jobs:
   frame2-test-run:
