--- a/.github/workflows/frame3-tests-daily.yml
+++ b/.github/workflows/frame3-tests-daily.yml
@@ -3,7 +3,7 @@ name: Run Frame3 Tests - Daily
 on:
   workflow_dispatch:
   schedule:
-    - cron: "42 12 * * *"  # 6:12 PM IST every day
+    - cron: "14 14 * * *"  # 7:40 PM IST daily
 
 jobs:
   frame3-test-run:
