--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -52,6 +52,7 @@ jobs:
           npx wdio run ./wdio.conf.ts --mochaOpts.grep="\\[${{ inputs.scenario-tags }}\\] \\[${{ inputs.tag-filter }}\\]"
 
       - name: Upload results to TestRail (if scheduled)
+        if: "steps.schedule_check.outputs.scheduled_run == 'true'"
         run: |
           node --import tsx ./test/testrail-cli/uploadResultsToTestRail.ts
         env:
@@ -62,3 +63,4 @@ jobs:
           TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
           TESTRAIL_SUITE_ID: ${{ secrets.TESTRAIL_SUITE_ID }}
           SCHEDULED_RUN: true
+ 
