--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -41,26 +41,17 @@ jobs:
         run: |
           npm ci
           npm install tsx@^4.7.0 --save-dev
+          npm install wdio-testrail-reporter --save-dev
 
-      - name: Evaluate SCHEDULED_RUN
-        id: schedule_check
-        run: echo "scheduled_run=$([[ '${{ github.event_name }}' == 'schedule' && '${{ github.run_attempt }}' == '1' ]] && echo true || echo false)" >> $GITHUB_OUTPUT
+      - name: Set ENV variables
+        run: |
+          echo "SCHEDULED_RUN=true" >> $GITHUB_ENV
+          echo "TESTRAIL_HOST=${{ secrets.TESTRAIL_HOST }}" >> $GITHUB_ENV
+          echo "TESTRAIL_USERNAME=${{ secrets.TESTRAIL_USERNAME }}" >> $GITHUB_ENV
+          echo "TESTRAIL_API_TOKEN=${{ secrets.TESTRAIL_API_TOKEN }}" >> $GITHUB_ENV
+        shell: bash
 
       - name: Run filtered tests
         run: |
-          echo "Running grep for: \\[${{ inputs.scenario-tags }}\\] \\[${{ inputs.tag-filter }}\\]"
+          echo "Running grep for: \[${{ inputs.scenario-tags }}\] \[${{ inputs.tag-filter }}\]"
           npx wdio run ./wdio.conf.ts --mochaOpts.grep="\\[${{ inputs.scenario-tags }}\\] \\[${{ inputs.tag-filter }}\\]"
-
-      - name: Upload results to TestRail (if scheduled)
-        if: "steps.schedule_check.outputs.scheduled_run == 'true'"
-        run: |
-          node --import tsx ./test/testrail-cli/uploadResultsToTestRail.ts
-        env:
-          RESULT_FILE: ${{ inputs.result-file }}
-          TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
-          TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
-          TESTRAIL_HOST: ${{ secrets.TESTRAIL_HOST }}
-          TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
-          TESTRAIL_SUITE_ID: ${{ secrets.TESTRAIL_SUITE_ID }}
-          SCHEDULED_RUN: true
- 
