--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -42,6 +42,8 @@ jobs:
           npm ci
           npm install tsx@^4.7.0 --save-dev
           npm install wdio-testrail-reporter --save-dev
+          npm install @types/wdio-testrail-reporter --save-dev
+
 
       - name: Set ENV variables
         run: |
