--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "description": "WebdriverIO self-healing with Gemini AI - in TypeScript",
     "scripts": {
         "build": "tsc",
-        "test": "wdio run ./wdio.conf.ts",
-        "upload-results": "ts-node-esm ./test/testrail-cli/uploadResultsToTestRail.ts"
+        "test": "wdio run ./wdio.conf.ts"
     },
     "devDependencies": {
         "@types/node": "^20.11.30",
+        "@wdio/allure-reporter": "^9.12.6",
         "@wdio/cli": "^8.32.2",
         "@wdio/devtools-service": "^8.32.2",
         "@wdio/globals": "^8.32.2",
@@ -19,7 +19,8 @@
         "@wdio/spec-reporter": "^8.32.2",
         "ts-node": "^10.9.2",
         "tsx": "^4.7.0",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "wdio-testrail-reporter": "^1.1.5"
     },
     "dependencies": {
         "axios": "^1.6.0",
