--- a/.github/workflows/frame-tests-daily.yml
+++ b/.github/workflows/frame-tests-daily.yml
@@ -3,10 +3,11 @@ name: Run Frame Tests - Daily
 on:
   workflow_dispatch:
   schedule:
-    - cron: "07 12 * * *"
+    - cron: "6 11 * * *"
 
 jobs:
   frame-test-run:
+    if: github.ref == 'refs/heads/qa'  # ✅ ensures job runs only on 'qa'
     uses: ./.github/workflows/test-runner.yml
     with:
       scenario-tags: 'FRAME'
