--- a/.github/workflows/weekly/frame-tests-weekly.yml
+++ b/.github/workflows/weekly/frame-tests-weekly.yml
@@ -1,16 +1,16 @@
-name: Run Frame2 Tests - Daily
+name: Run Frame Tests - Weekly
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "6 11 * * *"
+    - cron: "55 11 * * *"
 
 jobs:
-  frame2-test-run:
+  frame-test-weekly:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: 'FRAME2'
-      tag-filter: 'DAILY'
+      scenario-tags: 'FRAME'
+      tag-filter: 'WEEKLY'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
