--- a/.github/workflows/frame-tests.yml
+++ b/.github/workflows/frame-tests.yml
@@ -1,16 +1,18 @@
-name: Run Frame Tests - Daily
+name: Run Frame Tests - Daily and Weekly
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "55 11 * * *"
+    - cron: "35 13 * * *"     # Daily at 1:35 PM
+    - cron: "50 13 * * 4"     # Weekly on Thursday at 1:50 PM
 
 jobs:
-  frame-test-run:  
+  frame-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
       scenario-tags: 'FRAME'
-      tag-filter: 'DAILY'
+      tag-filter: 'DAILY|WEEKLY'
+      result-file: 'results-frame.xml'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
