--- a/.github/workflows/frame2-tests.yml
+++ b/.github/workflows/frame2-tests.yml
@@ -3,8 +3,8 @@ name: Run Frame2 Tests - Daily and Weekly
 on:
   workflow_dispatch:
   schedule:
-    - cron: "35 13 * * *"
-    - cron: "50 13 * * 4"
+    - cron: "18 9 * * *"     # 2:48 PM IST → 09:18 AM UTC
+    - cron: "30 9 * * 4"     # 3:00 PM IST Thursday → 09:30 AM UTC Thursday
 
 jobs:
   frame2-test-run:
