--- a/.github/workflows/frame-tests.yml
+++ b/.github/workflows/frame-tests.yml
@@ -1,17 +1,50 @@
+# name: Run Frame Tests - Daily and Weekly
+
+# on:
+#   workflow_dispatch:
+#   schedule:
+#     - cron: "18 9 * * *"     # 2:48 PM IST → 09:18 AM UTC
+#     - cron: "30 9 * * 4"     # 3:00 PM IST Thursday → 09:30 AM UTC Thursday
+
+# jobs:
+#   frame-test-run:
+#     uses: ./.github/workflows/test-runner.yml
+#     with:
+#       scenario-tags: 'FRAME'
+#       tag-filter: 'DAILY|WEEKLY'
+#       result-file: 'results-frame.xml'
+#     secrets:
+#       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
+#       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
+#       TESTRAIL_HOST: ${{ secrets.TESTRAIL_HOST }}
+#       TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
+#       TESTRAIL_SUITE_ID: ${{ secrets.TESTRAIL_SUITE_ID }}
+
+
 name: Run Frame Tests - Daily and Weekly
 
 on:
   workflow_dispatch:
+    inputs:
+      scenario-tags:
+        description: 'Scenario tags (e.g., FRAME, IFRAME)'
+        required: true
+        default: 'FRAME'
+      tag-filter:
+        description: 'Frequency tags (e.g., DAILY, WEEKLY)'
+        required: true
+        default: 'DAILY|WEEKLY'
+
   schedule:
-    - cron: "18 9 * * *"     # 2:48 PM IST → 09:18 AM UTC
-    - cron: "30 9 * * 4"     # 3:00 PM IST Thursday → 09:30 AM UTC Thursday
+    - cron: "20 11 * * *"     # 2:48 PM IST
+    - cron: "30 9 * * 4"     # 3:00 PM IST Thursday
 
 jobs:
   frame-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: 'FRAME'
-      tag-filter: 'DAILY|WEEKLY'
+      scenario-tags: ${{ github.event.inputs.scenario-tags || 'FRAME' }}
+      tag-filter: ${{ github.event.inputs.tag-filter || 'DAILY|WEEKLY' }}
       result-file: 'results-frame.xml'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
@@ -19,3 +52,4 @@ jobs:
       TESTRAIL_HOST: ${{ secrets.TESTRAIL_HOST }}
       TESTRAIL_PROJECT_ID: ${{ secrets.TESTRAIL_PROJECT_ID }}
       TESTRAIL_SUITE_ID: ${{ secrets.TESTRAIL_SUITE_ID }}
+
