--- a/.github/workflows/frame3-tests.yml
+++ b/.github/workflows/frame3-tests.yml
@@ -1,18 +1,15 @@
-name: Run Frame3 Tests - Daily and Weekly
+name: Run FRAME3 Tests - Weekly
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: "18 9 * * *"     # 2:48 PM IST → 09:18 AM UTC
-    - cron: "30 9 * * 4"     # 3:00 PM IST Thursday → 09:30 AM UTC Thursday
+    - cron: "20 9 * * *"  
+  workflow_dispatch:
 
 jobs:
   frame3-test-run:
     uses: ./.github/workflows/test-runner.yml
     with:
-      scenario-tags: 'FRAME3' 
-      tag-filter: 'DAILY|WEEKLY'
-      result-file: 'results-frame3.xml'
+      test-path: './test/specs/weekly-regression-suite/frame3.tests.ts'
     secrets:
       TESTRAIL_USERNAME: ${{ secrets.TESTRAIL_USERNAME }}
       TESTRAIL_API_TOKEN: ${{ secrets.TESTRAIL_API_TOKEN }}
