--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
       "@wdio/spec-reporter": "^9.12.6",
       "ts-node": "^10.9.2",
       "tsx": "^4.7.0",
-      "typescript": "^5.3.3",
-      "wdio-testrail-reporter": "^1.1.5"
+      "typescript": "^5.3.3"
     },
     "dependencies": {
       "axios": "^1.6.0",
