--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -52,5 +52,5 @@ jobs:
 
       - name: Run filtered tests
         run: |
-          echo "Running grep for: \[${{ inputs.scenario-tags }}\] \[${{ inputs.tag-filter }}\]"
-          npx wdio run ./wdio.conf.ts --mochaOpts.grep="\\[${{ inputs.scenario-tags }}\\] \\[${{ inputs.tag-filter }}\\]"
+          echo "Running grep for: [${{ inputs.scenario-tags }}] [${{ inputs.tag-filter }}]"
+          npx wdio run ./wdio.conf.ts --mochaOpts.grep="\\[(${{ inputs.scenario-tags }})\\]\\s\\[(${{ inputs.tag-filter }})\\]"
